# atlas-reth

./: .gitmodules  AGENTS.md  Cargo.toml  NEW-CONTRACT.md  PAYLOAD-REFERENCE-IMPLEMENTATION.md  README.md  justfile  separate-db-arkiv.md
.github/actions/docker-setup/: action.yml
.github/actions/smoke-test/: action.yml
.github/scripts/: packages.py
.github/workflows/: ci-fast.yml  ci-full.yml  list-packages.yml  payload-reference-integration.yml
chainspec/: dev.base.json
contracts/: .gitignore  README.md  foundry.toml
contracts/src/: EntityRegistry.sol
crates/arkiv-cli/: Cargo.toml
crates/arkiv-cli/src/: main.rs  simulate.rs
crates/arkiv-entitydb/: Cargo.toml
crates/arkiv-entitydb/src/: index_tree.rs  lib.rs
crates/arkiv-entitydb/src/query/: interpreter.rs  lexer.rs  parser.rs
crates/arkiv-entitydb/tests/: query_eval.rs
crates/arkiv-genesis/: Cargo.toml
crates/arkiv-genesis/src/: lib.rs
crates/arkiv-node/: Cargo.toml
crates/arkiv-node/src/: evm.rs  genesis.rs  install.rs  lib.rs  main.rs  precompile.rs  protocol_schedule.rs  rpc.rs  state_adapter.rs
crates/arkiv-node/tests/: payload_reference_precompile.rs  profile_create_op_direct.rs  profile_create_op_direct_precompile.rs
crates/arkiv-node/tests/common/: mod.rs
docker/: dev-entrypoint.sh  fund-account.sh  runtime-dev.Dockerfile  runtime.Dockerfile
docs/: 1_overview.md  2_state-model.md  3_query.md  4_engineering.md  5_reth-migration-plan.md  6_protocol-schedule-service.md  architecture.md  statedb-design.md
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: full_pipeline_e2e.rs  profile_create_op.rs
scripts/: payload-reference-dev-chain-smoke.sh  payload-reference-smoke-from-image.sh  profile-e2e.sh
