[workspace]
members = ["crates/arkiv-node", "crates/arkiv-cli", "crates/arkiv-entitydb", "crates/arkiv-genesis", "e2e"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arkiv Contributors <dev@arkiv.network>"]
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-or-later"
description = "Workspace for Arkiv Op-Reth integration"
repository = "https://github.com/Arkiv-Network/arkiv-op-reth"
readme = "README.md"
keywords = ["ethereum", "reth", "optimism", "arkiv"]

[workspace.dependencies]
# Op-Reth (from ethereum-optimism monorepo, pinned to op-reth/v2.2.5)
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5" }
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5" }
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5" }

# Reth (pinned to same rev as op-reth/v2.2.5)
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-primitives-traits = "0.3"

# Reth — test-only.
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "81c026181e96ef33a823f3ef4d2a28940e9fa4fe" }

# Arkiv bindings (from arkiv-contracts repo)
arkiv-bindings = { git = "https://github.com/Arkiv-Network/arkiv-contracts.git", rev = "d6ebe18" }

# Arkiv genesis primitives (in-tree)
arkiv-genesis = { path = "crates/arkiv-genesis" }

# Arkiv entity-DB core: encode/decode + address derivations for the
# entity / pair account model. Pure primitives — no DB code, no revm.
arkiv-entitydb = { path = "crates/arkiv-entitydb" }

# Arkiv node — exposed as a workspace dep so the e2e crate can depend on it.
arkiv-node = { path = "crates/arkiv-node" }

# Alloy
alloy-primitives = { version = "1.5", features = ["rlp"] }
alloy-consensus = "2.0"
alloy-eips = "2.0"
alloy-genesis = "2.0"
alloy-hardforks = "0.4"
alloy-sol-types = "1.5"
alloy-provider = "2.0"
alloy-signer-local = { version = "2.0", features = ["mnemonic"] }
alloy-network = "2.0"
alloy-contract = "2.0"
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-rpc-types = "2.0"
alloy-rpc-types-engine = "2.0"
alloy-rpc-types-eth = "2.0"

# EVM
revm = { version = "38", default-features = false, features = ["std"] }
revm-precompile = { version = "34", default-features = false, features = ["std"] }
alloy-evm = { version = "0.34", default-features = false, features = ["std"] }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5", default-features = false, features = ["std"] }
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5", default-features = false, features = ["std"] }
op-revm = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.5", default-features = false, features = ["std"] }

# Roaring bitmaps — pure-Rust impl. RoaringTreemap (64-bit) serialization
# is byte-deterministic for a given set (sorted-key BTreeMap container
# ordering + portable RoaringFormatSpec on-disk format) — required for
# consensus on `codeHash = keccak256(bitmap_bytes)`.
roaring = "0.11"

# Util
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"
hex = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

