[package]
name = "arkiv-genesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arkiv-entitydb.workspace = true

alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true

eyre.workspace = true
