[package]
name = "arkiv-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "arkiv-node"
path = "src/main.rs"

[dependencies]
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-ethereum-cli.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-chainspec.workspace = true

arkiv-genesis.workspace = true
arkiv-entitydb.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

alloy-eips.workspace = true
alloy-hardforks.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-evm.workspace = true
revm.workspace = true
revm-precompile.workspace = true

async-trait.workspace = true
clap.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# Used by tests/profile_create_op_direct.rs to emit chrome-trace JSON
# of the spans installed in this crate + arkiv-entitydb. Bypasses reth's
# block executor entirely so the trace contains no payload-builder /
# state-root / sealing / tokio noise.
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json.workspace = true
